logs/checkthat_train.err
  File "app/main_checkthat.py", line 525
    if model == "light_gbm"
                          ^
SyntaxError: invalid syntax
